--- a/src/styles/scss/atomic.style.scss
+++ b/src/styles/scss/atomic.style.scss
@@ -10,14 +10,23 @@
 .Bdrs\(1rem\) {
   border-radius: 1rem;
 }
+.Bdrs\(4px\) {
+  border-radius: 4px;
+}
 .Bdrs\(4rem\) {
   border-radius: 4rem;
+}
+.Bdrs\(8px\) {
+  border-radius: 8px;
 }
 .Bgc\(\#00adb5\) {
   background-color: #00adb5;
 }
 .Bgc\(\#082032\) {
   background-color: #082032;
+}
+.Bgc\(\#092942\) {
+  background-color: #092942;
 }
 .Bgc\(\#2c394b\) {
   background-color: #2c394b;
@@ -55,6 +64,9 @@
 .C\(\#fff\) {
   color: #fff;
 }
+.C\(white\) {
+  color: white;
+}
 .Cur\(p\) {
   cursor: pointer;
 }
@@ -85,6 +97,9 @@
 .Fw\(600\) {
   font-weight: 600;
 }
+.Fw\(b\) {
+  font-weight: bold;
+}
 .Fz\(1\.4rem\) {
   font-size: 1.4rem;
 }
@@ -111,6 +126,9 @@
 }
 .Gp\(1rem\) {
   gap: 1rem;
+}
+.Gp\(2rem\) {
+  gap: 2rem;
 }
 .H\(100\%\) {
   height: 100%;
@@ -139,8 +157,8 @@
 .Mt\(2rem\) {
   margin-top: 2rem;
 }
-.Mt\(3rem\) {
-  margin-top: 3rem;
+.Mt\(5rem\) {
+  margin-top: 5rem;
 }
 .Maw\(maxc\) {
   max-width: max-content;
@@ -184,6 +202,9 @@
 .Ov\(h\) {
   overflow: hidden;
 }
+.P\(1rem\) {
+  padding: 1rem;
+}
 .P\(2rem\) {
   padding: 2rem;
 }
@@ -217,8 +238,14 @@
 .Td\(n\) {
   text-decoration: none;
 }
+.Tt\(c\) {
+  text-transform: capitalize;
+}
 .Trs\(trs-d\) {
   transition: all 300ms;
+}
+.Trsdu\(300ms\) {
+  transition-duration: 300ms;
 }
 .W\(100\%\), .Row {
   width: 100%;
