--- a/src/index.scss
+++ b/src/index.scss
@@ -1,31 +1,28 @@
 * {
-  margin    : 0;
-  padding   : 0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-
 html {
-  font-size         : 62.5%;
+  font-size: 62.5%;
 }
 
-
-body{
+body {
   background-color: #222831;
-  color: #EEEEEE;
+  color: #eeeeee;
   min-height: 100vh;
-  font-family: 'Lobster', cursive;
+  font-family: "Ubuntu Mono", monospace;
 }
 
-button{
+button {
   border: none;
 }
 
-input{
+input {
   outline: none;
-  border: none
+  border: none;
 }
 
-
-@import './assets/fonts/font-icon/icons.css';
-@import './styles/scss/main.style.scss';
+@import "./assets/fonts/font-icon/icons.css";
+@import "./styles/scss/main.style.scss";
